# GO/src/program/04-ginchat/router/app.go
@@ -12,13 +12,28 @@ import (
 
 func Router() *gin.Engine {
 	r := gin.Default()
+	// swagger
 	docs.SwaggerInfo.BasePath = ""
 	r.GET("/swagger/*any", ginSwagger.WrapHandler(swaggerFiles.Handler))
+	// 静态资源
+	r.Static("/asset", "asset/")
+	r.LoadHTMLGlob("views/**/*")
+	// 首页
+	r.GET("/", service.GetIndex)
 	r.GET("/index", service.GetIndex)
-	r.GET("/user/getUserList", service.GetUserList)
-	r.GET("/user/createUser", service.CreateUser)
-	r.GET("/user/deleteUser", service.DeletUser)
+	r.GET("/toRegister", service.ToRegister)
+	r.GET("/toChat", service.ToChat)
+	r.GET("/chat", service.Chat)
+	r.POST("/searchFriends", service.SearchFriends)
+	// 用户模块
+	r.POST("/user/getUserList", service.GetUserList)
+	r.POST("/user/createUser", service.CreateUser)
+	r.POST("/user/deleteUser", service.DeletUser)
 	r.POST("/user/updateUser", service.UpdateUser)
+	r.POST("/user/findUserByNameAndPwd", service.FindUserByNameAndPwd)
+	// 发送消息
+	r.GET("/user/sendMsg", service.SendMsg)
+	r.GET("/user/sendUserMsg", service.SendUserMsg)
 
 	return r
 }
